--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1 class="title-t4">2023 신년계획</h1>
     <p>가능한 빨리 탈출하자</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t3 center done">코딩배우기</div>
+        <div class="bucket img1-t3 center">코딩배우기</div>
         <div class="bucket img2 center">일신우일신</div>
         <div class="bucket img2 center">나는내가 지킨다</div>
         <div class="bucket img1-4center">어떻게 살아야하는가</div>
